<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="gameResult"
            type="com.brostopchat.math_game_test_app.domain.entity.GameResult"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.GameFinishedFragment">

        <TextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="236dp"
            app:requiredAnswers="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/needed_true_answers"
            />

        <TextView
            android:id="@+id/tv_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:countAnswers="@{gameResult.countOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_1"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/your_score"
            />

        <TextView
            android:id="@+id/tv_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:requiredPercent="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_2"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/needed_percent_true_answers"
            />

        <TextView
            android:id="@+id/tv_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:scorePercentage="@{gameResult}"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_3"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/percent_true_answers"
            />

        <Button
            android:id="@+id/button_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>